[gd_scene load_steps=30 format=2]

[ext_resource path="res://Menus/HUD/Hud.gd" type="Script" id=1]
[ext_resource path="res://Menus/resources/white.png" type="Texture" id=2]
[ext_resource path="res://Objects/Game_modes/FFA/FFAMinimap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/HUD/fistfinal.png" type="Texture" id=4]
[ext_resource path="res://Menus/HUD/scope3.png" type="Texture" id=5]
[ext_resource path="res://Menus/HUD/grenedefinal.png" type="Texture" id=6]
[ext_resource path="res://font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Menus/HUD/pause3.png" type="Texture" id=8]
[ext_resource path="res://Menus/resources/black_btn.tres" type="StyleBox" id=9]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Sprites/UI/bullet.png" type="Texture" id=11]
[ext_resource path="res://Fonts/ARIAL.TTF" type="DynamicFontData" id=12]
[ext_resource path="res://Menus/resources/next_gun.png" type="Texture" id=13]
[ext_resource path="res://controls/controllers/default_controller.tscn" type="PackedScene" id=14]
[ext_resource path="res://Fonts/ARIALBD.TTF" type="DynamicFontData" id=15]

[sub_resource type="CircleShape2D" id=1]
radius = 98.0

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 80, 40 )

[sub_resource type="CircleShape2D" id=4]
radius = 40.0

[sub_resource type="CircleShape2D" id=5]
radius = 45.0

[sub_resource type="DynamicFont" id=6]
size = 32
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0.686275 )
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_size = 6

[sub_resource type="DynamicFont" id=9]
size = 20
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=10]
size = 20
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 40, 40 )

[sub_resource type="StyleBoxFlat" id=12]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 70, 25 )

[sub_resource type="DynamicFont" id=14]
size = 36
use_filter = true
font_data = ExtResource( 10 )

[node name="Hud" type="CanvasLayer" groups=[
"Hud",
]]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.627
anchor_top = 0.906
anchor_right = 0.627
anchor_bottom = 0.906
margin_left = -67.5601
margin_top = -49.32
margin_right = 67.4399
margin_bottom = 48.68
__meta__ = {
"_edit_use_anchors_": false
}

[node name="melee" type="TouchScreenButton" parent="Control"]
scale = Vector2( 0.754964, 0.465095 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="reload" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 0.067
anchor_right = 1.0
anchor_bottom = 0.067
margin_left = -188.0
margin_top = -41.24
margin_right = -91.0
margin_bottom = 4.76
rect_scale = Vector2( 1.70963, 1.78606 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gun_s" type="TextureRect" parent="reload"]
margin_left = 3.0
margin_top = 3.0
margin_right = 94.0
margin_bottom = 43.0
rect_min_size = Vector2( 91, 40 )
mouse_filter = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn" type="TouchScreenButton" parent="reload"]
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 0.584922, 0.559892 )
shape = SubResource( 3 )

[node name="TextureProgress" type="TextureProgress" parent="reload"]
self_modulate = Color( 1, 1, 1, 0.470588 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = -20.0
margin_right = 45.5
margin_bottom = 20.0
mouse_filter = 2
value = 50.0
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.0156863, 0.956863, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b1" type="Sprite" parent="reload"]
position = Vector2( 82.2771, 57.2319 )
rotation = -1.5708
scale = Vector2( 0.432732, 0.57199 )
texture = ExtResource( 11 )

[node name="b2" type="Sprite" parent="reload"]
position = Vector2( 56, 57.232 )
rotation = -1.5708
scale = Vector2( 0.432732, 0.57199 )
texture = ExtResource( 11 )

[node name="b3" type="Sprite" parent="reload"]
position = Vector2( 32.5897, 57.4767 )
rotation = -1.5708
scale = Vector2( 0.432732, 0.57199 )
texture = ExtResource( 11 )

[node name="b4" type="Sprite" parent="reload"]
position = Vector2( 10.8183, 57.7213 )
rotation = -1.5708
scale = Vector2( 0.432732, 0.57199 )
texture = ExtResource( 11 )

[node name="zoom" type="TextureButton" parent="."]
anchor_left = 0.048
anchor_top = 0.214
anchor_right = 0.048
anchor_bottom = 0.214
margin_left = -39.942
margin_top = -35.589
margin_right = 40.058
margin_bottom = 35.411
shortcut_in_tooltip = false
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zoom" type="TouchScreenButton" parent="zoom"]
position = Vector2( 1.1376, -4.55041 )
shape = SubResource( 4 )

[node name="HE" type="TextureButton" parent="."]
anchor_left = 0.413
anchor_top = 0.905
anchor_right = 0.413
anchor_bottom = 0.905
margin_left = -42.576
margin_top = -49.048
margin_right = 56.424
margin_bottom = 34.952
rect_rotation = 8.39806
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HE" type="TouchScreenButton" parent="HE"]
position = Vector2( 5.62723, 2.88458 )
shape = SubResource( 5 )

[node name="Label" type="Label" parent="HE"]
margin_left = 101.649
margin_top = 33.2484
margin_right = 154.649
margin_bottom = 76.2484
custom_fonts/font = SubResource( 6 )
text = "x2"

[node name="pause" type="TextureButton" parent="."]
anchor_left = 0.046
anchor_top = 0.074
anchor_right = 0.046
anchor_bottom = 0.074
margin_left = -41.333
margin_top = -39.04
margin_right = 41.667
margin_bottom = 38.96
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -255.0
margin_right = 167.0
margin_bottom = 238.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -205.0
margin_right = 130.0
margin_bottom = 205.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Button" parent="Panel2/container"]
margin_right = 260.0
margin_bottom = 50.0
rect_min_size = Vector2( 165, 50 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 7 )
text = "Score Board"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="changeTeam" type="Button" parent="Panel2/container"]
margin_top = 90.0
margin_right = 260.0
margin_bottom = 140.0
rect_min_size = Vector2( 165, 50 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 7 )
text = "Change Team"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="admin_menu" type="Button" parent="Panel2/container"]
margin_top = 180.0
margin_right = 260.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 50 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/focus = ExtResource( 9 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 7 )
disabled = true
text = "Admin Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="Panel2/container"]
margin_top = 270.0
margin_right = 260.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 50 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = ExtResource( 7 )
text = "Quit Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="Panel2/container"]
margin_top = 360.0
margin_right = 260.0
margin_bottom = 410.0
rect_min_size = Vector2( 0, 50 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = ExtResource( 7 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="kill_msg" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 208.0
margin_right = 320.0
margin_bottom = 428.0
custom_constants/separation = 8
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="1" type="RichTextLabel" parent="kill_msg"]
margin_right = 300.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/bold_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "ssdsdsad"
text = "ssdsdsad"

[node name="2" type="RichTextLabel" parent="kill_msg"]
margin_top = 38.0
margin_right = 300.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/bold_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true

[node name="3" type="RichTextLabel" parent="kill_msg"]
margin_top = 76.0
margin_right = 300.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/bold_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true

[node name="4" type="RichTextLabel" parent="kill_msg"]
margin_top = 114.0
margin_right = 300.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/bold_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true

[node name="5" type="RichTextLabel" parent="kill_msg"]
margin_top = 152.0
margin_right = 300.0
margin_bottom = 182.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/bold_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true

[node name="6" type="RichTextLabel" parent="kill_msg"]
margin_top = 190.0
margin_right = 300.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/bold_font = SubResource( 9 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true

[node name="Control2" type="Control" parent="."]
anchor_left = 0.824
anchor_top = 0.061
anchor_right = 0.824
anchor_bottom = 0.061
margin_left = 0.140747
margin_top = 0.101254
margin_right = 45.1407
margin_bottom = 25.1013
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nextGun" type="TouchScreenButton" parent="Control2"]
position = Vector2( 29.01, -19.2737 )
rotation = -3.14159
scale = Vector2( 1, -1 )
normal = ExtResource( 13 )
pressed = ExtResource( 13 )
shape = SubResource( 11 )

[node name="Minimap" type="Panel" parent="."]
anchor_left = 0.999
anchor_top = 0.299
anchor_right = 0.999
anchor_bottom = 0.299
margin_left = -255.89
margin_top = -78.2082
margin_right = 0.109985
margin_bottom = 77.7918
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Minimap" parent="Minimap" instance=ExtResource( 3 )]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 3.0
margin_top = 3.0
margin_right = 247.28
margin_bottom = 147.4

[node name="fps" type="Label" parent="."]
margin_left = 111.0
margin_top = 9.0
margin_right = 158.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps_timer" type="Timer" parent="."]

[node name="pick" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.2793
margin_top = 94.2715
margin_right = 66.7207
margin_bottom = 134.271
custom_styles/normal = ExtResource( 9 )
text = "Pick"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pic_touch" type="TouchScreenButton" parent="pick"]
position = Vector2( -5.17657, -4.85297 )
shape = SubResource( 13 )

[node name="cash" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.012
margin_top = -206.604
margin_right = 71.988
margin_bottom = -158.604
rect_pivot_offset = Vector2( 44.5, 24 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.141176, 0.568627, 0.0235294, 1 )
text = "+ $10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controller" parent="." instance=ExtResource( 14 )]
[connection signal="pressed" from="Control/melee" to="." method="_on_melee_pressed"]
[connection signal="pressed" from="reload/btn" to="." method="_on_btn_pressed"]
[connection signal="pressed" from="zoom/zoom" to="." method="_on_zoom_pressed"]
[connection signal="pressed" from="HE/HE" to="." method="_on_HE_pressed"]
[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Panel2/container/score" to="." method="_on_score_pressed"]
[connection signal="pressed" from="Panel2/container/changeTeam" to="." method="_on_changeTeam_pressed"]
[connection signal="pressed" from="Panel2/container/admin_menu" to="." method="_on_admin_menu_pressed"]
[connection signal="pressed" from="Panel2/container/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel2/container/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control2/nextGun" to="." method="_on_nextGun_pressed"]
[connection signal="timeout" from="fps_timer" to="." method="_on_fps_timer_timeout"]
[connection signal="pressed" from="pick/pic_touch" to="." method="_on_pic_touch_pressed"]
